app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"camel-quarkus:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"camel-quarkus\")].image"}]'
  labels:
    app: camel-quarkus
    app.kubernetes.io/component: camel-quarkus
    app.kubernetes.io/instance: camel-quarkus
  name: camel-quarkus
  namespace: gitops-demo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: camel-quarkus
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: camel-quarkus
    spec:
      containers:
      - image: ' '
        imagePullPolicy: IfNotPresent
        name: camel-quarkus
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
