app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: camel-quarkus
    app.kubernetes.io/component: camel-quarkus
    app.kubernetes.io/instance: camel-quarkus
  name: camel-quarkus
  namespace: gitops-demo
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    deployment: camel-quarkus
  sessionAffinity: None
  type: ClusterIP
