app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: camel-quarkus
    app.kubernetes.io/component: camel-quarkus
    app.kubernetes.io/instance: camel-quarkus
  name: camel-quarkus
  namespace: gitops-demo
spec:
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: camel-quarkus
    weight: 100
  wildcardPolicy: None
